Switch H2 database from file-based to in-memory

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=todoApp
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-spring.datasource.url=jdbc:h2:file:./data/todoapp
+spring.datasource.url=jdbc:h2:mem:todoapp;DB_CLOSE_DELAY=-1
 
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
